adding marker to screen ok

--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <div>Player <span class="currentlyPlaying">1</span></div>
     <div class="gameboardContainer">
-        <div class="gamePad"></div>
-        <div class="gamePad"></div>
-        <div class="gamePad"></div>
-        <div class="gamePad"></div>
-        <div class="gamePad"></div>
-        <div class="gamePad"></div>
-        <div class="gamePad"></div>
-        <div class="gamePad"></div>
-        <div class="gamePad"></div>
+        <div class="gamePad" data-num ="1"></div>
+        <div class="gamePad" data-num ="2"></div>
+        <div class="gamePad" data-num ="3"></div>
+        <div class="gamePad" data-num ="4"></div>
+        <div class="gamePad" data-num ="5"></div>
+        <div class="gamePad" data-num ="6"></div>
+        <div class="gamePad" data-num ="7"></div>
+        <div class="gamePad" data-num ="8"></div>
+        <div class="gamePad" data-num ="9"></div>
     </div>
     
 
