--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <div class="gamePad" data-num ="7"></div>
         <div class="gamePad" data-num ="8"></div>
     </div>
+
+    <button id="restart">Restart</button>
     
 
 
