--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <div>Player <span class="currentlyPlaying">1</span></div>
+    <nav>
+        <h1>Tic-Tac-Toe</h1>
+    </nav>
+    <div class="player">Player <span class="currentlyPlaying">1</span></div>
     <div class="gameboardContainer">
         <div class="gamePad" data-num ="0"></div>
         <div class="gamePad" data-num ="1"></div>
