UI elements added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <nav>
         <h1>Tic-Tac-Toe</h1>
     </nav>
-    <div class="player">Player <span class="currentlyPlaying">1</span></div>
+    <div class="player">
+        <h1>Player <span class="currentlyPlaying">1</span></h1>
+        <h2 class="win">Win</h2>       
+    </div>
     <div class="gameboardContainer">
         <div class="gamePad" data-num ="0"></div>
         <div class="gamePad" data-num ="1"></div>
